--- a/front-end/GMF/src/app/pages/navbar/navbar.component.html
+++ b/front-end/GMF/src/app/pages/navbar/navbar.component.html
@@ -1,21 +1,25 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-bar">
   <div class="container-fluid">
-    <a><img class="logo" src="assets/logo.svg"></a>
-    <div class="collapse navbar-collapse" id="navbarScroll">
-      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-        <li class="d-flex align-items-center nav-item">
-          <img class="icon" src="assets/home.svg" alt="icon">
-          <a class="nav-link active" aria-current="page">Home</a>
-        </li>
-        <li class="d-flex align-items-center nav-item mx-3">
-          <img class="icon" src="assets/star.svg" alt="icon">
-          <a class="nav-link active" aria-current="page">Valores</a>
-        </li>
-        <li class="d-flex align-items-center nav-item">
-          <img class="icon" src="assets/log-in.svg" alt="icon">
-          <a class="nav-link active" aria-current="page">Sair</a>
-        </li>
-      </ul>
-    </div>
+      <img  class="logo" src="assets/logo.svg" alt="logo" style="cursor: pointer;">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <img src="assets/menu.svg" alt="icon">
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+          <li class="d-flex align-items-center nav-item">
+            <img class="icon" src="assets/home.svg" alt="icon">
+            <a class="nav-link active" aria-current="page">Home</a>
+          </li>
+          <li class="d-flex align-items-center nav-item">
+            <img class="icon" src="assets/star.svg" alt="icon">
+            <a class="nav-link active" aria-current="page">Valores</a>
+          </li>
+          <li class="d-flex align-items-center nav-item">
+            <img class="icon" src="assets/log-in.svg" alt="icon">
+            <a class="nav-link active" aria-current="page">Sair</a>
+          </li>
+        </ul>
+      </div>
   </div>
 </nav>
