--- a/front-end/GMF/src/app/pages/navbar/navbar.component.scss
+++ b/front-end/GMF/src/app/pages/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 #nav-bar {
   background-color: var(--color-secondary)!important;
-  padding: 8px 68px;
+  padding: 12px 68px;
 }
 
 #navbarScroll {
@@ -8,7 +8,8 @@
 }
 
 .navbar-nav {
-  --bs-scroll-height: 100px;
+  display: flex;
+  gap:20px;
   margin: 0!important;
 }
 
@@ -22,4 +23,25 @@
 
 .nav-item, .logo {
   cursor: pointer;
+}
+
+.navbar-toggler {
+  border: 1px solid var(--color-white);
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-nav {
+    gap:4px;
+    margin-top:12px!important;
+  }
+
+  .nav-item {
+    gap:8px
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #nav-bar {
+    padding: 12px 20px;
+  }
 }
