style: component home added at project

--- a/front-end/GMF/src/app/pages/home/home.component.html
+++ b/front-end/GMF/src/app/pages/home/home.component.html
@@ -1,1 +1,29 @@
 <app-navbar></app-navbar>
+<div class="content-home">
+  <div class="d-flex flex-wrap justify-content-between mb-4">
+    <div class="d-flex flex-column gap-2">
+      <h2 class="titulo">Termos</h2>
+      <h3 class="subtitulo">Qual termo gostaria de acessar hoje?</h3>
+    </div>
+    <button class="adicionar d-flex align-items-center justify-content-between gap-4">
+      <img src="../../../assets/move.svg" alt="icone">
+      <span>Adicionar Turma</span>
+    </button>
+  </div>
+  <div class="group-cards d-flex flex-wrap justify-content-between mb-4">
+    <div class="card d-flex align-items-center justify-content-center"
+        *ngFor="let item of cicloUm"
+        [style.background-color]="item.cor"
+        >
+      <h2 class="text-card">{{item.termo}}</h2>
+    </div>
+  </div>
+  <div class="group-cards d-flex flex-wrap justify-content-between">
+    <div class="card d-flex align-items-center justify-content-center"
+         *ngFor="let item of cicloDois"
+         [style.background-color]="item.cor"
+         >
+      <h2 class="text-card">{{item.termo}}</h2>
+    </div>
+  </div>
+</div>
