--- a/front-end/GMF/src/app/pages/home/home.component.scss
+++ b/front-end/GMF/src/app/pages/home/home.component.scss
@@ -22,6 +22,8 @@
   height: 192px;
   border: none;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2), -1px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+
   .text-card {
     color: var(--color-gray-600);
     font-weight: 500;
