--- a/front-end/GMF/src/styles.scss
+++ b/front-end/GMF/src/styles.scss
@@ -192,3 +192,8 @@ h3.subtitulo {
   color: var(--color-gray-300);
 }
 
+h4.titulos {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--color-secondary);
+}
