feat: routerLinks and modals added at project

--- a/front-end/GMF/src/app/pages/home/home.component.html
+++ b/front-end/GMF/src/app/pages/home/home.component.html
@@ -12,6 +12,7 @@
   </div>
   <div class="group-cards d-flex flex-wrap justify-content-between mb-4">
     <div class="card d-flex align-items-center justify-content-center"
+        routerLink="/termos"
         *ngFor="let item of cicloUm"
         [style.background-color]="item.cor"
         >
