--- a/front-end/GMF/src/app/pages/login/login.component.scss
+++ b/front-end/GMF/src/app/pages/login/login.component.scss
@@ -14,7 +14,8 @@
       .green {
         font-size: 16px;
         font-weight: 600;
-        color: var(--color-secondary)
+        color: var(--color-secondary);
+        cursor: pointer;
       }
 
       .gray {
