--- a/front-end/GMF/src/app/pages/login/login.component.html
+++ b/front-end/GMF/src/app/pages/login/login.component.html
@@ -13,10 +13,10 @@
         <img class="image" [src]="MostrarSenha ?  '../../../assets/unlock.svg' : '../../../assets/Lock.svg' " (click)="visibilidadeSenha()"  alt="">
         <input class="pass" [type]="MostrarSenha ? 'text' : 'password'">
       </div>
-      <button routerLink="/home">Entrar</button>
+      <button routerLink="/home" (click)="openModal()">Entrar</button>
       <div class="d-flex gap-2">
         <span class="gray">Ainda não possui conta?</span>
-        <span class="green">Cadastre-se</span>
+        <span class="green" routerLink="/register">Cadastre-se</span>
       </div>
     </form>
   </div>
