feat: routes added at navbar and modal

--- a/front-end/GMF/src/app/modal/modal-eventos/modal-eventos.component.html
+++ b/front-end/GMF/src/app/modal/modal-eventos/modal-eventos.component.html
@@ -5,7 +5,9 @@
   </div>
   <div class="d-flex flex-column gap-2" *ngFor="let item of lista">
     <div>
-      <img class="event-img" [src]="item.image" alt="image">
-    </div>
-  </div>
+      <a href="https://www.fatecpompeia.edu.br/">
+        <img class="event-img" [src]="item.image"> 
+      </a>
+    </div> 
+  </div> 
  </div>
