--- a/front-end/GMF/src/app/pages/navbar/navbar.component.html
+++ b/front-end/GMF/src/app/pages/navbar/navbar.component.html
@@ -7,15 +7,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-          <li class="d-flex align-items-center nav-item">
+          <li class="d-flex align-items-center nav-item" routerLink="/home">
             <img class="icon" src="assets/home.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Home</a>
           </li>
-          <li class="d-flex align-items-center nav-item">
+          <li class="d-flex align-items-center nav-item" routerLink="/valores">
             <img class="icon" src="assets/star.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Valores</a>
           </li>
-          <li class="d-flex align-items-center nav-item">
+          <li class="d-flex align-items-center nav-item" routerLink="/">
             <img class="icon" src="assets/log-in.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Sair</a>
           </li>
