refactor: atribute alt added

--- a/front-end/GMF/src/app/modal/modal-eventos/modal-eventos.component.html
+++ b/front-end/GMF/src/app/modal/modal-eventos/modal-eventos.component.html
@@ -6,7 +6,7 @@
   <div class="d-flex flex-column gap-2" *ngFor="let item of lista">
     <div>
       <a href="https://www.fatecpompeia.edu.br/">
-        <img class="event-img" [src]="item.image"> 
+        <img class="event-img" [src]="item.image" alt="card"> 
       </a>
     </div> 
   </div> 
