--- a/front-end/GMF/src/app/pages/valores/valores.component.html
+++ b/front-end/GMF/src/app/pages/valores/valores.component.html
@@ -18,7 +18,7 @@
          [style.background-color]="item.cor"
         >
       <h2 class="text-card">{{item.valores}}</h2>
-      <img [src]="'../../../assets/' + item.img + '.svg'" alt="imagem">
+      <img [src]="'../../../assets/' + item.img + '.svg'" alt="icon">
     </div>
   </div>
   <div class="group-cards d-flex flex-wrap justify-content-between">
@@ -27,7 +27,7 @@
          [style.background-color]="item.cor"
          >
       <h2 class="text-card">{{item.valores}}</h2>
-      <img [src]="'../../../assets/' + item.img + '.svg'" alt="imagem">
+      <img [src]="'../../../assets/' + item.img + '.svg'" alt="icon">
     </div>
   </div>
 </div>
