--- a/front-end/GMF/src/app/modal/modal-adicionar-termo/modal-adicionar-termo.component.html
+++ b/front-end/GMF/src/app/modal/modal-adicionar-termo/modal-adicionar-termo.component.html
@@ -1,1 +1,14 @@
-<p>modal-adicionar-termo works!</p>
+<div class="content-modal">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h3>Adicione uma nova disciplina</h3>
+    <img src="../../../assets/x.svg" alt="icon"  (click)="close()">
+  </div>
+  <form class="d-flex flex-column gap-4">
+    <div class="form-group d-flex flex-column gap-2">
+      <label for="disciplina">Disciplina</label>
+      <input type="text">
+    </div>
+    <button class="turma">Criar disciplina</button>
+  </form>
+</div>
+
