--- a/front-end/GMF/src/app/pages/home/home.component.scss
+++ b/front-end/GMF/src/app/pages/home/home.component.scss
@@ -6,6 +6,9 @@
   border: none;
   background-color: var(--color-secondary);
   border-radius: 5px;
+  height: 52px;
+  padding: 24px;
+
 
   &:hover {
     background-color: var(--color-secondary-hover);
