--- a/front-end/GMF/src/app/pages/termos/termos.component.html
+++ b/front-end/GMF/src/app/pages/termos/termos.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="content-termos">
-  <div class="d-flex flex-wrap align-items-center justify-content-between gap-4 mb-4">
+  <div class="d-flex flex-wrap align-items-center justify-content-between gap-4 mb-5">
     <h2 class="titulo">4° Termo</h2>
     <div class="d-flex gap-2">
       <h2 class="titulo">Olá,</h2>
@@ -8,9 +8,9 @@
     </div>
   </div>
   <div class="d-flex justify-content-end">
-    <button class="adicionar d-flex align-items-center justify-content-between mb-4  gap-4">
+    <button class="adicionar d-flex align-items-center justify-content-between mb-5 gap-4" (click)="openModalDisciplinas()">
       <img src="../../../assets/move.svg" alt="icone">
-      <span>Adicionar Termo</span>
+      <span>Adicionar Disciplina</span>
     </button>
   </div>
   <div class="group-cards d-flex flex-wrap justify-content-between mb-4">
