--- a/gmf/src/main/webapp/content/scss/global.scss
+++ b/gmf/src/main/webapp/content/scss/global.scss
@@ -237,3 +237,206 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
   }
 }
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+
+
+
+//Reset CSS
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+// Variaveis globais
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
+:root {
+  --color-primary:   #2AEF88;
+  --color-secondary: #21BC6B;
+  --color-secondary-hover: #1d9c5a;
+  --color-tertiary:  #148B4D;
+  --color-white:     #FFFFFF;
+  --color-black:     #000000;
+  --color-gray-100:  #F1F0F5;
+  --color-gray-200:  #C6C5CE;
+  --color-gray-300:  #7A7786;
+  --color-gray-400:  #5F5C6B;
+  --color-gray-500:  #4E4B59;
+  --color-gray-600:  #3E3E3E;
+}
+
+
+// Estilos modais
+
+.content-modal {
+  padding: 30px 42px;
+
+  h3 {
+    font-size: 18;
+    font-weight: 600;
+    color: var(--color-black);
+  }
+
+  img {
+    cursor: pointer;
+  }
+}
+
+// Estilo das telas com formulários
+
+.background {
+  width: 600px;
+}
+
+// Estilos do título e sub-título
+
+h2.titulo {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--color-gray-600);
+}
+
+h3.subtitulo {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--color-gray-300);
+}
+
+h4.titulos {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--color-secondary);
+}
