--- a/gmf/src/main/webapp/app/login/login.component.html
+++ b/gmf/src/main/webapp/app/login/login.component.html
@@ -1,59 +1,44 @@
-<div>
-  <div class="d-flex justify-content-center">
-    <div class="col-lg-6 col-md-8 col-sm-10">
-      <h1 data-cy="loginTitle" jhiTranslate="login.title">Sign in</h1>
-      @if (authenticationError()) {
-        <div class="alert alert-danger" data-cy="loginError" jhiTranslate="login.messages.error.authentication">
-          <strong>Failed to sign in!</strong> Please check your credentials and try again.
-        </div>
-      }
-      <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
-        <div class="mb-3">
-          <label class="username-label" for="username" jhiTranslate="global.form.username.label">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            name="username"
-            id="username"
-            placeholder="{{ 'global.form.username.placeholder' | translate }}"
-            formControlName="username"
-            #username
-            data-cy="username"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="password" jhiTranslate="login.form.password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            id="password"
-            placeholder="{{ 'login.form.password.placeholder' | translate }}"
-            formControlName="password"
-            data-cy="password"
-          />
-        </div>
-
-        <div class="form-check">
-          <label class="form-check-label" for="rememberMe">
-            <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe" />
-            <span jhiTranslate="login.form.rememberme">Remember me</span>
-          </label>
-        </div>
-
-        <button type="submit" class="btn btn-primary" data-cy="submit" jhiTranslate="login.form.button">Sign in</button>
-      </form>
-      <div class="mt-3 alert alert-warning">
-        <a class="alert-link" routerLink="/account/reset/request" data-cy="forgetYourPasswordSelector" jhiTranslate="login.password.forgot"
-          >Did you forget your password?</a
-        >
+<div class="content-login d-flex align-items-center">
+  <img class="img-left" src="../../content/images/background2.svg" alt="icone">
+  <div class="rigth">
+    <form role="form" (ngSubmit)="login()" [formGroup]="loginForm" class="d-flex align-items-center flex-column gap-4">
+      <img class="logo" src="../../content/images/Login.svg" alt="logo">
+      <h2>Guia do Mochileiro<br> Fatecano</h2>
+      <div class="form-group d-flex flex-column gap-2">
+        <label for="username">E-mail</label>
+        <input 
+          type="text"
+          name="username"
+          id="username"
+          placeholder="Insira seu e-mail"
+          formControlName="username"
+          #username
+          data-cy="username"
+          >
       </div>
-
-      <div class="alert alert-warning">
-        <span jhiTranslate="global.messages.info.register.noaccount">You don&apos;t have an account yet?</span>
-        <a class="alert-link" routerLink="/account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
+      <div class="form-groups d-flex flex-column gap-2">
+        <label for="password">Senha</label>
+        <img 
+          class="image" 
+          [src]="mostrarSenha ?  '../../content/images/unlock.svg' : '../../content/images/Lock.svg' " 
+          (click)="visibilidadeSenha()"  
+          alt="icone"
+          >
+        <input 
+          class="pass" 
+          [type]="mostrarSenha ? 'text' : 'password'"
+          name="password"
+          id="password"
+          placeholder="Insira sua senha"
+          formControlName="password"
+          data-cy="password"
+          >
       </div>
-    </div>
+      <button type="submit" >Entrar</button>
+      <div class="d-flex gap-2">
+        <span class="gray">Ainda não possui conta?</span>
+        <span class="green" routerLink="/account/register">Cadastre-se</span>
+      </div>
+    </form>
   </div>
 </div>
