style: styles altered at error component

--- a/gmf/src/main/webapp/app/layouts/error/error.component.html
+++ b/gmf/src/main/webapp/app/layouts/error/error.component.html
@@ -1,15 +1,5 @@
-<div>
-  <div class="row">
-    <div class="col-md-4">
-      <span class="hipster img-fluid rounded"></span>
-    </div>
-
-    <div class="col-md-8">
-      <h1 jhiTranslate="error.title">Error page!</h1>
-
-      @if (errorMessage()) {
-        <div class="alert alert-danger">{{ errorMessage() }}</div>
-      }
-    </div>
+<div class="row">
+  <div class="d-flex justify-content-center col-12">
+    <img style="width: 800px;" src="../../../content/images/404.svg" alt="imagem">
   </div>
 </div>
