--- a/gmf/src/main/webapp/app/entities/blog/list/blog.component.html
+++ b/gmf/src/main/webapp/app/entities/blog/list/blog.component.html
@@ -1,103 +1,44 @@
-<div>
-  <h2 id="page-heading" data-cy="BlogHeading">
-    <span jhiTranslate="blogApp.blog.home.title">Blogs</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="blogApp.blog.home.refreshListLabel">Refresh list</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-blog"
-        [routerLink]="['/blog/new']"
+<div class="content-home">
+  <div class="d-flex flex-wrap justify-content-between mb-4">
+    <div class="d-flex flex-column gap-2">
+      <h2 class="titulo">Termos</h2>
+      <h3 class="subtitulo">Qual termo gostaria de acessar hoje?</h3>
+    </div>
+    <button 
+      class="adicionar d-flex align-items-center justify-content-between gap-4"
+      (click)="openModalAdicionarTurma()"
       >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="blogApp.blog.home.createLabel">Create a new Blog</span>
-      </button>
-    </div>
-  </h2>
-
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  @if (blogs?.length === 0) {
-    <div class="alert alert-warning" id="no-result">
-      <span jhiTranslate="blogApp.blog.home.notFound">No Blogs found</span>
-    </div>
-  }
-
-  @if (blogs && blogs.length > 0) {
-    <div class="table-responsive table-entities" id="entities">
-      <table class="table table-striped" aria-describedby="page-heading">
-        <thead>
-          <tr jhiSort [sortState]="sortState" (sortChange)="navigateToWithComponentValues($event)">
-            <th scope="col" jhiSortBy="id">
-              <div class="d-flex">
-                <span jhiTranslate="global.field.id">ID</span>
-
-                <fa-icon class="p-1" icon="sort"></fa-icon>
-              </div>
-            </th>
-            <th scope="col" jhiSortBy="name">
-              <div class="d-flex">
-                <span jhiTranslate="blogApp.blog.name">Name</span>
-
-                <fa-icon class="p-1" icon="sort"></fa-icon>
-              </div>
-            </th>
-            <th scope="col" jhiSortBy="handle">
-              <div class="d-flex">
-                <span jhiTranslate="blogApp.blog.handle">Handle</span>
-
-                <fa-icon class="p-1" icon="sort"></fa-icon>
-              </div>
-            </th>
-            <th scope="col" jhiSortBy="user.login">
-              <div class="d-flex">
-                <span jhiTranslate="blogApp.blog.user">User</span>
-                <fa-icon class="p-1" icon="sort"></fa-icon>
-              </div>
-            </th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          @for (blog of blogs; track trackId) {
-            <tr data-cy="entityTable">
-              <td>
-                <a [routerLink]="['/blog', blog.id, 'view']">{{ blog.id }}</a>
-              </td>
-              <td>{{ blog.name }}</td>
-              <td>{{ blog.handle }}</td>
-              <td>
-                {{ blog.user?.login }}
-              </td>
-              <td class="text-end">
-                <div class="btn-group">
-                  <a [routerLink]="['/blog', blog.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
-                    <fa-icon icon="eye"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                  </a>
-
-                  <a [routerLink]="['/blog', blog.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
-                    <fa-icon icon="pencil-alt"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                  </a>
-
-                  <button type="submit" (click)="delete(blog)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                    <fa-icon icon="times"></fa-icon>
-                    <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                  </button>
-                </div>
-              </td>
-            </tr>
-          }
-        </tbody>
-      </table>
+      <img src="../../../../content/images/move.svg" alt="icone">
+      <span>Adicionar Termo</span>
+    </button>
+  </div>
+  <div class="group-cards d-flex flex-wrap justify-content-between gap-4 mb-4">
+    @for (blog of blogs; track trackId) {
+    <div class="card d-flex align-items-center justify-content-center">
+        <div ngbDropdown class="more">
+          <img class="cursor" src="../../../../content/images/more-vertical.svg" alt="icon" ngbDropdownToggle>
+          <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+            <!--<button 
+              ngbDropdownItem  
+              class="d-flex align-items-center gap-3" 
+              [routerLink]="['/blog', blog.id, 'edit']"
+              >
+              <img class="icon-card" src="../../../../content/images/edit.svg" alt="icon">
+              Editar
+            </button>-->
+            <button 
+              ngbDropdownItem 
+              class="d-flex align-items-center gap-3"
+              type="submit" 
+              (click)="delete(blog)"
+              >
+              <img class="icon-card" src="../../../../content/images/trash.svg" alt="icon">
+              Excluir
+            </button>
+          </div>
+        </div>
+      <h2 class="text-card">{{ blog.name }}</h2>
     </div>
   }
+  </div> 
 </div>
