--- a/gmf/src/main/webapp/app/entities/blog/update/blog-update.component.html
+++ b/gmf/src/main/webapp/app/entities/blog/update/blog-update.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex justify-content-center">
-  <div class="col-8">
+<div class="content-modal d-flex justify-content-center">
+  <div class="col-12">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-blog-heading" data-cy="BlogCreateUpdateHeading" jhiTranslate="blogApp.blog.home.createOrEditLabel">
-        Create or edit a Blog
+      <h2 class="titulo mb-5" id="jhi-blog-heading" data-cy="BlogCreateUpdateHeading">
+        Crie ou edite seu termo
       </h2>
 
       <div>
@@ -10,22 +10,21 @@
 
         @if (editForm.controls.id.value !== null) {
           <div class="mb-3">
-            <label class="form-label" for="field_id" jhiTranslate="blogApp.blog.id">ID</label>
+            <label class="form-label" for="field_id">ID</label>
             <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
           </div>
         }
 
         <div class="mb-3">
-          <label class="form-label" for="field_name" jhiTranslate="blogApp.blog.name">Name</label>
+          <label class="form-label" for="field_name">Nome</label>
           <input type="text" class="form-control" name="name" id="field_name" data-cy="name" formControlName="name" />
           @if (editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)) {
             <div>
               @if (editForm.get('name')?.errors?.required) {
-                <small class="form-text text-danger" jhiTranslate="entity.validation.required">This field is required.</small>
+                <small class="form-text text-danger">Esse campo é obrigatório</small>
               }
               @if (editForm.get('name')?.errors?.minlength) {
-                <small class="form-text text-danger" jhiTranslate="entity.validation.minlength" [translateValues]="{ min: '3' }"
-                  >This field is required to be at least 3 characters.</small
+                <small class="form-text text-danger">Esse campo é obrigatório e deve conter pelo menos 3 caracteres</small
                 >
               }
             </div>
@@ -33,16 +32,15 @@
         </div>
 
         <div class="mb-3">
-          <label class="form-label" for="field_handle" jhiTranslate="blogApp.blog.handle">Handle</label>
+          <label class="form-label" for="field_handle">Semestre/Ano</label>
           <input type="text" class="form-control" name="handle" id="field_handle" data-cy="handle" formControlName="handle" />
           @if (editForm.get('handle')!.invalid && (editForm.get('handle')!.dirty || editForm.get('handle')!.touched)) {
             <div>
               @if (editForm.get('handle')?.errors?.required) {
-                <small class="form-text text-danger" jhiTranslate="entity.validation.required">This field is required.</small>
+                <small class="form-text text-danger">Esse campo é obrigatório</small>
               }
               @if (editForm.get('handle')?.errors?.minlength) {
-                <small class="form-text text-danger" jhiTranslate="entity.validation.minlength" [translateValues]="{ min: '2' }"
-                  >This field is required to be at least 2 characters.</small
+                <small class="form-text text-danger">Esse campo é obrigatório e deve conter pelo menos 2 caracteres</small
                 >
               }
             </div>
@@ -62,7 +60,7 @@
 
       <div>
         <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+          <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
         </button>
 
         <button
@@ -72,7 +70,7 @@
           [disabled]="editForm.invalid || isSaving"
           class="btn btn-primary"
         >
-          <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+          <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
         </button>
       </div>
     </form>
