--- a/gmf/src/main/webapp/content/scss/global.scss
+++ b/gmf/src/main/webapp/content/scss/global.scss
@@ -57,15 +57,15 @@ Browser Upgrade Prompt
 Generic styles
 ========================================================================== */
 
-/* Error highlight on input fields */
+/* Error highlight on input fields 
 .ng-valid[required],
 .ng-valid.required {
-  border-left: 5px solid green;
+  border: 1px solid green;
 }
 
-.ng-invalid:not(form) {
-  border-left: 5px solid red;
-}
+.ng-invalid:not(form):focus  {
+  border: 1px solid red;
+}*/
 
 /* other generic styles */
 
