--- a/gmf/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/gmf/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -46,19 +46,6 @@
                     <span jhiTranslate="global.menu.entities.post">Post</span>
                   </a>
                 </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    routerLink="/tag"
-                    routerLinkActive="active"
-                    [routerLinkActiveOptions]="{ exact: true }"
-                    (click)="collapseNavbar()"
-                  >
-                    <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                    <span jhiTranslate="global.menu.entities.tag">Tag</span>
-                  </a>
-                </li>
-                <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
               </ul>
             </li>
           }
@@ -68,7 +55,11 @@
             <img class="icon" src="../../../content/images/home.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Home</a>
           </li>
-          <li class="d-flex align-items-center nav-item" routerLink="/valores">
+          <li class="d-flex align-items-center nav-item" routerLink="/post">
+            <img class="icon" src="../../../content/images/book.svg" alt="icon">
+            <a class="nav-link active" aria-current="page">Matérias</a>
+          </li>
+          <li class="d-flex align-items-center nav-item" routerLink="/tag">
             <img class="icon" src="../../../content/images/star.svg" alt="icon">
             <a class="nav-link active" aria-current="page">Valores</a>
           </li>
