--- a/gmf/src/main/webapp/app/layouts/main/main.component.html
+++ b/gmf/src/main/webapp/app/layouts/main/main.component.html
@@ -1,5 +1,6 @@
-<router-outlet name="navbar"></router-outlet>
-
+@if (account() !== null) {
+  <router-outlet name="navbar"></router-outlet>
+}
 
 <div class="container-fluid">
   <div class="card jh-card">
