--- a/gmf/src/main/webapp/app/entities/post/list/post.component.html
+++ b/gmf/src/main/webapp/app/entities/post/list/post.component.html
@@ -1,64 +1,44 @@
-<div>
-  <h2 id="page-heading" data-cy="PostHeading">
-    <span jhiTranslate="blogApp.post.home.title">Posts</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="blogApp.post.home.refreshListLabel">Refresh list</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-post"
-        [routerLink]="['/post/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="blogApp.post.home.createLabel">Create a new Post</span>
-      </button>
+<div class="content-termos">
+  <div class="d-flex flex-wrap align-items-center justify-content-end gap-4 mb-5">
+    <div class="d-flex gap-2">
+      <h2 class="titulo">Olá,</h2>
+      <h4 class="titulos">João Pedro</h4>
     </div>
-  </h2>
+  </div>
+  <div class="d-flex justify-content-end">
+    <button class="adicionar d-flex align-items-center justify-content-between mb-5 gap-4" [routerLink]="['/post/new']">
+      <img src="../../../../content/images/move.svg" alt="icone">
+      <span>Adicionar Disciplina</span>
+    </button>
+  </div>
+  <div class="group-cards d-flex flex-wrap justify-content-between gap-4 mb-4">
+    @for (post of posts; track trackId) {
 
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  @if (posts?.length === 0) {
-    <div class="alert alert-warning" id="no-result">
-      <span jhiTranslate="blogApp.post.home.notFound">No Posts found</span>
-    </div>
-  }
-  @if (posts && posts.length) {
-    <div class="table-responsive table-entities" id="entities">
-      <div infinite-scroll (scrolled)="loadNextPage()" [infiniteScrollDisabled]="!hasMorePage()" [infiniteScrollDistance]="0">
-        @for (post of posts; track trackId) {
-          <div data-cy="entityTable">
-            <a [routerLink]="['/post', post.id, 'view']" data-cy="entityDetailsButton">
-              <h2>{{ post.title }}</h2>
-            </a>
-            <small
-              >Posted on {{ post.date | formatMediumDatetime }}
-              @if (post.blog) {
-                <span
-                  >in <a [routerLink]="['/blog', post.blog.id, 'view']">{{ post.blog.name }}</a></span
-                >
-              }
-            </small>
-            <div [innerHTML]="post.content"></div>
-            <div class="btn-group mb-2 mt-1">
-              <button type="submit" [routerLink]="['/post', post.id, 'edit']" class="btn btn-primary btn-sm">
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit" data-cy="entityEditButton">Edit</span>
-              </button>
-              <button type="submit" (click)="delete(post)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
-          </div>
-        }
+    <div class="card d-flex align-items-center justify-content-center">
+      <div ngbDropdown class="more">
+        <img class="cursor" src=".../../../../content/images/more-vertical.svg" alt="icon" ngbDropdownToggle>
+        <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+          <button 
+            ngbDropdownItem 
+            class="d-flex align-items-center gap-3"
+            [routerLink]="['/post', post.id, 'edit']"
+            >
+            <img class="icon-card" src=".../../../../content/images/edit.svg" alt="icon">
+            Editar
+          </button>
+          <button  
+            ngbDropdownItem 
+            class="d-flex align-items-center gap-3"
+            (click)="delete(post)" 
+            >
+            <img class="icon-card" src="../../../../content/images/trash.svg" alt="icon">
+            Excluir
+          </button>
+        </div>
       </div>
+        <h2 class="text-card" (click)="openDetail(post)">{{post.title}}</h2>
     </div>
-  }
+    }
+  </div>
 </div>
+
